NULL =

EXTRA_DIST = \
	commonv2c.ttf.c			\
	commonwealth-10.font.c		\
	dejavu_sans-10.font.c		\
	dejavu_sans.ttf.c		\
	gui.cpp				\
	gui.h				\
	resource_provider.cpp		\
	resource_provider.h		\
	softrenderer.cpp		\
	softrenderer.h			\
	softtexture.cpp			\
	softtexture.h			\
	taharez_look.imageset.c		\
	taharez_look.looknfeel.c	\
	taharez_look.scheme.c		\
	taharez_look.tga.c		\
        $(NULL)

