NULL =

EXTRA_DIST = \
	atomic_count.h		\
	event_sources_p.cpp	\
	event_sources_p.h	\
	generate1.bat		\
	generate.bat		\
	main.cpp		\
	my_getopt.cpp		\
	named_pipe.cpp		\
	named_pipe.h		\
	pixels_source.cpp	\
	pixels_source_p.h	\
	platform.cpp		\
	platform_utils.cpp	\
	platform_utils.h	\
	playback.cpp		\
	playback.h		\
	record.cpp		\
	record.h		\
	redc.rc			\
	redc.sln		\
	redc.vcproj		\
	red_drawable.cpp	\
	red_pixmap.cpp		\
	red_pixmap_gdi.cpp	\
	red_pixmap_sw.cpp	\
	red_window.cpp		\
	red_window_p.h		\
	resource.h		\
	spicec.exe.manifest	\
	spice.ico		\
	stdint.h		\
	sticky_alt.bmp		\
	win_platform.h		\
        $(NULL)

